[gd_scene load_steps=4 format=3 uid="uid://bnl4byuvpes5d"]

[ext_resource type="Texture2D" uid="uid://buisny0qqxlna" path="res://textures/gui.png" id="1_8ohfs"]
[ext_resource type="Script" uid="uid://cqqj1gde77c2t" path="res://modals/pedestal_modal.gd" id="1_ile2j"]
[ext_resource type="Texture2D" uid="uid://b4fb8yrtobc16" path="res://textures/Head_Pillars_48x24.webp" id="2_ile2j"]

[node name="PedestalModal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ile2j")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(160, 71)
scale = Vector2(2, 2)
texture = ExtResource("1_8ohfs")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(160, 73)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_ile2j")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(114, 57)

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(206, 57)

[node name="Marker2D3" type="Marker2D" parent="."]
position = Vector2(176, 49)

[node name="Marker2D4" type="Marker2D" parent="."]
position = Vector2(144, 49)

[node name="Sprite2D3" type="Sprite2D" parent="."]
visible = false
position = Vector2(80, 130)

[node name="Sprite2D4" type="Sprite2D" parent="."]
visible = false
position = Vector2(80, 130)

[node name="Sprite2D5" type="Sprite2D" parent="."]
visible = false
position = Vector2(80, 130)

[node name="Sprite2D6" type="Sprite2D" parent="."]
visible = false
position = Vector2(80, 130)

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 130.0
offset_right = 106.0
offset_bottom = 156.0

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 125.0
offset_top = 130.0
offset_right = 151.0
offset_bottom = 156.0

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 214.0
offset_top = 130.0
offset_right = 240.0
offset_bottom = 156.0

[node name="Button4" type="Button" parent="."]
layout_mode = 0
offset_left = 168.0
offset_top = 130.0
offset_right = 194.0
offset_bottom = 156.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
